# oblique

./: .coveragerc  .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  MANIFEST.in  README.md  cli.py  install.sh  live.py  main.py  pyproject.toml  repl.py  repl.sh  requirements.txt  start.sh
core/: __init__.py  base_module.py  control_ipc.py  control_subprocess.py  control_tui.py  control_tui_main.py  default_repl_template.py  engine.py  frame_analysis.py  headless_renderer.py  live_api.py  live_helpers.py  logger.py  midi_mapper.py  oblique_engine.py  oblique_node.py  oblique_patch.py  param_store.py  paths.py  performance_monitor.py  preview_server.py  registry.py  renderer.py  shader_preprocessor.py  signal_processor.py
docs/: ai-creative-agent-manifesto.md  ai-native-architecture.md  creative-coding-audit.md  design-analysis.md  engineering-backlog.md  rust-rewrite-roadmap.md
input/: __init__.py
inputs/: __init__.py  audio_device_channel_input.py  audio_device_input.py  audio_file_input.py  base_input.py
modules/: __init__.py  animated_grid.py  barrel_distortion.py  base_av_module.py  blur_module.py  broken_circles.py  circle_echo.py  composite_module.py  debug.py  example_module.py  feedback.py  grid_swap_module.py  iked_grid.py  ikeda_test_pattern.py  ikeda_tiny_barcode.py  level_module.py  media_module.py  mesh_shroud.py  pauric_particles.py  pauric_squares_module.py  protoplasm.py  ryoji_grid.py  ryoji_lines.py  shader_toy_tester.py  spectral_visualizer.py  transform.py  visual_noise.py
output/: __init__.py  compositor.py  display.py
(+141 files in other folders)
